--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Curso de DevOps Alura</title>
+    <title> Lista de Cursos de DevOps Alura</title>
 </head>
 <body>
     <ul>
